--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,14 @@
-@import './common';
-@import './example';
+@import './common/modern-normalize';
+@import './utils/variables';
+@import './utils/visually-hidden';
+@import './utils/mixins';
+@import './utils/placeholders';
+@import './common/base';
+@import './layout/header';
+@import './layout/hero';
+@import './layout/products';
+@import './layout/about';
+@import './layout/gallery';
+@import './layout/reviews';
+@import './layout/locations';
+@import './layout/footer';
