--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,45 @@
 <section class="header">
-  <div class="container">Header</div>
+  <div class="container">
+    <a href="./index.html" class="logo">
+      <svg class="logo__icon">
+        <use href="./images/sprite.svg#logo"></use>
+      </svg>
+      icecream
+    </a>
+
+    <nav>
+      <ul class="header__list">
+        <li class="header__item">
+          <a href="./index.html" class="header__link">Home</a>
+        </li>
+        <li class="header__item">
+          <a href="#about" class="header__link">How it’s made?</a>
+        </li>
+        <li class="header__item">
+          <a href="#products" class="header__link">Our products</a>
+        </li>
+        <li class="header__item">
+          <a href="#contacts" class="header__link">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+
+    <button
+      class="header__burger btn-toggle"
+      type="button"
+      id="menu-toggle"
+      data-menu-button
+    >
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+    </button>
+
+    <button class="header__button main-button" type="button">
+      Buy now
+      <svg class="main-button__icon">
+        <use href="./images/sprite.svg#arrow-right-small"></use>
+      </svg>
+    </button>
+  </div>
 </section>
