--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,8 @@
 @import './utils/placeholders';
 @import './common/base';
 @import './layout/header';
+@import './components/logo';
+@import './components/burger';
 @import './layout/hero';
 @import './layout/products';
 @import './layout/about';
