--- a/src/sass/common/_base.scss
+++ b/src/sass/common/_base.scss
@@ -3,7 +3,6 @@ body {
   font-size: 16px;
   line-height: 1.86;
   font-weight: 500;
-  letter-spacing: 0.04em;
 
   color: var(--main-color);
 
@@ -43,6 +42,7 @@ img {
 }
 
 button {
+  display: inline-block;
   padding: 0;
   border: none;
 
