--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,17 +2,15 @@
   --main-text: 'DM Sans', sans-serif;
   --title-text: 'Titan One', sans-serif;
 
-  --main-color: #fcfcfc;
-  --secondary-color: #131313;
+  --main-color: #0029ff;
+  --secondary-color: #298cff;
+  --tertiary-color: #fcfcfc;
+  --quaternary-color: #131313;
 
-  // --accent-color: #0a8817;
-  --accent-color: #0a2588;
+  --accent-color: #f8d24e;
 
-  --contrasting-color: #f8d24e;
-  --contrasting-color-alfa10: rgba(248, 210, 78, 0.1);
-
-  // --background-main-color: #84a178;
-  --background-main-color: #7887a1;
+  --background-main-color: #54a3ff;
+  --background-secondary-color: #a4ceff;
 
   --timing-fn: cubic-bezier(0.4, 0, 0.2, 1);
 }
