--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,7 @@
           <a href="./index.html" class="header__link">Home</a>
         </li>
         <li class="header__item">
-          <a href="#about" class="header__link">How it’s made?</a>
+          <a href="#about" class="header__link">How it's made?</a>
         </li>
         <li class="header__item">
           <a href="#products" class="header__link">Our products</a>
