tablet hero section

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,16 +2,22 @@
   <div class="container">
     <div class="hero__wrapper-left">
       <div class="title-cover">
-        <h1 class="hero__title">
+        <h1 class="hero__title animate__animated animate__shakeY">
           <span class="hero__title--default"> ice cream made with</span>
           <span class="hero__title--accent">passion</span>
         </h1>
-        <ul class="hero__buttons">
-          <li class="hero__button">
-            <a class="hero__section-link" href="#products">Products</a>
+        <ul class="hero__list">
+          <li class="hero__item">
+            <a
+              class="hero__main-link hero__main-link--products"
+              href="#products"
+              >Products</a
+            >
           </li>
           <li class="hero__button">
-            <a class="hero__section-link" href="#about">How it's made?</a>
+            <a class="hero__main-link hero__main-link--about" href="#about"
+              >How it's made?</a
+            >
           </li>
         </ul>
       </div>
@@ -93,6 +99,11 @@
           alt="a big delicious ice cream"
         />
       </picture>
+      <img
+        class="hero__mobile-dots"
+        src="./images/hero/mobile/dots-m.svg"
+        alt="decor dots"
+      />
     </div>
 
     <div class="hero__wrapper-right">
