--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,7 +7,9 @@
   --tertiary-color: #fcfcfc;
   --quaternary-color: #131313;
 
-  --accent-color: #f8d24e;
+  // --accent-color: #f8d24e;
+  --accent-color: #0f00e0;
+  --accent-secondary-color: #cccccc;
 
   --background-main-color: #54a3ff;
   --background-secondary-color: #a4ceff;
