--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -1,7 +1,21 @@
-%mainButtonIcon {
-  width: 12px;
-  height: 12px;
-  margin-left: 12px;
+%mainButton {
+  display: flex;
+  align-items: center;
+  height: 44px;
+  padding: 0 37px;
+  border-radius: 22px;
 
-  fill: currentColor;
+  font-weight: 700;
+  line-height: 1.313;
+
+  transition: color 250ms var(--timing-fn),
+    background-color 250ms var(--timing-fn);
+
+  & .main-button__icon {
+    width: 12px;
+    height: 12px;
+    margin-left: 12px;
+
+    fill: currentColor;
+  }
 }
