hero section all devices

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
       icecream
     </a>
 
-    <nav>
+    <nav class="header__nav">
       <ul class="header__list">
         <li class="header__item">
           <a href="./index.html" class="header__link">Home</a>
