--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -12,11 +12,13 @@
   }
 }
 
+.header__nav {
+  margin: 0 auto;
+}
+
 .header__list {
   display: flex;
   column-gap: 28px;
-
-  @include adaptiveValue(margin-left, 100, 200, 1024, 1200);
 
   @media screen and (max-width: 1023px) {
     display: none;
@@ -70,9 +72,5 @@
 
   @media screen and (max-width: 731px) {
     display: none;
-  }
-
-  @media screen and (min-width: 1024px) {
-    margin-left: auto;
   }
 }
