--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,15 +3,16 @@
 
   background-color: var(--background-main-color);
   background-repeat: no-repeat;
-  background-size: 320px;
+  background-position: center bottom;
 
-  @media screen and (min-width: 732px) {
+  @media screen and (min-width: 732px) and (max-width: 1023px) {
     background-size: 768px;
-    background-position: center bottom;
+
     background-image: url('../images/hero/tablet/dots-t.svg');
   }
 
   @media screen and (min-width: 1024px) {
+    background-size: 1200px;
     background-image: url('../images/hero/desktop/dots-d.svg');
   }
 
@@ -26,9 +27,6 @@
   }
 }
 
-// .hero__wrapper-left {
-// }
-
 .title-cover {
   @media screen and (max-width: 731px) {
     position: absolute;
@@ -39,6 +37,11 @@
   @media screen and (min-width: 732px) {
     margin-top: 10px;
     margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin-top: 62px;
+    margin-bottom: 50px;
   }
 }
 
@@ -56,9 +59,18 @@
     line-height: 1.136;
   }
 
+  @media screen and (min-width: 1024px) {
+    font-size: 38px;
+    line-height: 1.158;
+  }
+
   &--default {
     display: block;
     max-width: 200px;
+
+    @media screen and (min-width: 1024px) {
+      max-width: 300px;
+    }
   }
 
   &--accent {
@@ -72,6 +84,11 @@
 
     @media screen and (min-width: 732px) {
       font-size: 34px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      font-size: 58px;
+      line-height: 1.138;
     }
   }
 }
@@ -90,7 +107,6 @@
 .hero__main-link {
   display: flex;
   align-items: center;
-  // height: 24px;
   padding: 10px 12px;
   border-radius: 20px;
 
@@ -133,6 +149,10 @@
 
 .hero__desc-wrap {
   margin-left: 16px;
+
+  @media screen and (min-width: 1024px) {
+    margin-left: 5px;
+  }
 }
 
 .hero__desc {
@@ -204,6 +224,14 @@
     margin-left: 50px;
   }
 
+  @media screen and (min-width: 1024px) {
+    @include adaptiveValue(margin-left, 180, 300, 1024, 1200);
+
+    @media screen and (min-width: 1200px) {
+      margin-left: 300px;
+    }
+  }
+
   &::before {
     content: '';
 
@@ -219,23 +247,25 @@
     background-color: var(--secondary-color);
 
     @media screen and (min-width: 732px) {
-      width: 360px;
-      height: 360px;
-
       top: -62px;
       left: -84px;
+
+      width: 360px;
+      height: 360px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      top: -62px;
+      left: -122px;
+
+      width: 538px;
+      height: 538px;
     }
   }
 }
 
 .hero__main-img {
   position: relative;
-
-  // margin-top: 20px;
-
-  // @media screen and (min-width: 732px) {
-  //   margin-left: 50px;
-  // }
 }
 
 .hero__mobile-dots {
@@ -270,6 +300,10 @@
   z-index: 1;
 
   text-align: right;
+
+  @media screen and (min-width: 1024px) {
+    right: 18px;
+  }
 
   &:first-child {
     margin-bottom: 13px;
