products section all devices

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,6 +28,7 @@
       class="header__burger btn-toggle"
       type="button"
       id="menu-toggle"
+      aria-label="Mobile menu open button"
       data-menu-button
     >
       <span class="line"></span>
@@ -35,7 +36,11 @@
       <span class="line"></span>
     </button>
 
-    <button class="header__button main-button" type="button">
+    <button
+      class="header__button main-button"
+      type="button"
+      aria-label="Buy-now button"
+    >
       Buy now
       <svg class="main-button__icon">
         <use href="./images/sprite.svg#arrow-right-small"></use>
