--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -176,6 +176,8 @@
 
   color: var(--tertiary-color);
 
+  transition: background-color 250ms var(--timing-fn);
+
   &:hover,
   &:focus,
   &:active {
