--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -19,3 +19,53 @@
     fill: currentColor;
   }
 }
+
+%sectionSubtitle {
+  font-family: var(--title-text);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.167;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+
+  @media screen and (min-width: 732px) {
+    font-size: 26px;
+    line-height: 1.154;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 30px;
+    line-height: 1.133;
+    letter-spacing: 0.04em;
+  }
+}
+
+%sectionTitle {
+  margin-top: 15px;
+  margin-bottom: 144px;
+
+  font-family: var(--title-text);
+  text-align: center;
+  font-size: 34px;
+  font-weight: 400;
+  line-height: 1.147;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--main-color);
+
+  @media screen and (min-width: 732px) {
+    margin-bottom: 150px;
+
+    font-size: 48px;
+    line-height: 1.146;
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 260px;
+
+    font-size: 58px;
+    line-height: 1.138;
+    letter-spacing: 0.06em;
+  }
+}
