--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,3 +1,191 @@
 .products {
-  background-image: none;
+  padding: 60px 0;
+
+  background-image: url('../images/products/mobile/background-m2.svg');
+  background-size: 400px;
+  background-position: center top;
+
+  @media screen and (min-width: 732px) {
+    padding: 100px 0;
+
+    background-size: 400px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    padding: 130px 0;
+
+    background-size: 500px;
+  }
+}
+
+// .container {
+// }
+
+.products__subtitle {
+  @extend %sectionSubtitle;
+}
+
+.products__title {
+  @extend %sectionTitle;
+}
+
+.products__list {
+  @media screen and (min-width: 732px) {
+    display: flex;
+    column-gap: 16px;
+  }
+
+  @media screen and (min-width: 732px) {
+    column-gap: 29px;
+  }
+}
+
+.products__item {
+  position: relative;
+
+  // height: 428px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 160px;
+  padding-bottom: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 24px;
+
+  box-shadow: 0px 4px 10px 0px #0029ff;
+
+  @media screen and (max-width: 731px) {
+    max-width: 320px;
+  }
+
+  @media screen and (min-width: 732px) {
+    width: calc(100% - 2 * 16px);
+    padding-left: 26px;
+    padding-right: 26px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: calc(100% - 2 * 29px);
+    padding-top: 240px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  &:nth-child(1) {
+    background-color: #ffb8ca;
+  }
+
+  &:nth-child(2) {
+    background-color: #f0d1a5;
+  }
+
+  &:nth-child(3) {
+    background-color: #c2e297;
+  }
+
+  @media screen and (max-width: 731px) {
+    &:not(:last-child) {
+      margin-bottom: 130px;
+    }
+  }
+}
+
+.products__flex-cover {
+  flex-grow: 1;
+}
+
+.products__img {
+  position: absolute;
+  top: -100px;
+  left: 50%;
+
+  transform: translateX(-50%);
+
+  @media screen and (min-width: 1024px) {
+    top: -150px;
+  }
+}
+
+.products__name {
+  font-family: var(--title-text);
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--tertiary-color);
+
+  @media screen and (min-width: 1024px) {
+    font-size: 30px;
+    line-height: 1.133;
+  }
+}
+
+.products__decor-dots {
+  display: flex;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  margin: 30px auto;
+
+  background-color: var(--tertiary-color);
+}
+
+.products__desc {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.52;
+  letter-spacing: 0.04em;
+  color: var(--tertiary-color);
+
+  @media screen and (min-width: 732px) {
+    line-height: 1.76;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 16px;
+  }
+}
+
+.products__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+
+  color: var(--tertiary-color);
+
+  transition: color 250ms var(--timing-fn),
+    background-color 250ms var(--timing-fn);
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: var(--accent-color);
+    background-color: var(--tertiary-color);
+  }
+
+  @media screen and (min-width: 732px) {
+    margin-top: 10px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin-top: 60px;
+  }
+}
+
+.products__btn-icon {
+  width: 30px;
+  height: 16px;
+
+  fill: currentColor;
 }
