about section all devices

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,11 +36,7 @@
       <span class="line"></span>
     </button>
 
-    <button
-      class="header__button main-button"
-      type="button"
-      aria-label="Buy-now button"
-    >
+    <button class="header__button" type="button" aria-label="Buy-now button">
       Buy now
       <svg class="main-button__icon">
         <use href="./images/sprite.svg#arrow-right-small"></use>
