--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -66,7 +66,8 @@
   background-color: var(--tertiary-color);
 
   &:hover,
-  &:focus {
+  &:focus,
+  &:active {
     background-color: var(--accent-secondary-color);
   }
 
