--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -40,7 +40,11 @@
             />
           </picture>
           <h3 class="products__name">ice cream</h3>
-          <span class="products__decor-dots"></span>
+          <div class="products__decor-wrap">
+            <span class="products__decor-dots"></span>
+            <span class="products__decor-dots"></span>
+            <span class="products__decor-dots"></span>
+          </div>
           <p class="products__desc">
             Soft ice cream with a delicate taste. Made with milk, cream, sugar
             and natural stabilizer
@@ -94,7 +98,11 @@
             />
           </picture>
           <h3 class="products__name">ice coffee</h3>
-          <span class="products__decor-dots"></span>
+          <div class="products__decor-wrap">
+            <span class="products__decor-dots"></span>
+            <span class="products__decor-dots"></span>
+            <span class="products__decor-dots"></span>
+          </div>
           <p class="products__desc">
             Fragrant invigorating drink created from 100% natural ingredients
             without the use of preservatives and flavor enhancers
@@ -148,7 +156,11 @@
             />
           </picture>
           <h3 class="products__name">milkshakes</h3>
-          <span class="products__decor-dots"></span>
+          <div class="products__decor-wrap">
+            <span class="products__decor-dots"></span>
+            <span class="products__decor-dots"></span>
+            <span class="products__decor-dots"></span>
+          </div>
           <p class="products__desc">
             Sweet drinks based on milk and ice cream, supplemented with syrups,
             fruits, berries and other sweets of your choice
