--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -132,12 +132,20 @@
   }
 }
 
-.products__decor-dots {
+.products__decor-wrap {
   display: flex;
+  justify-content: center;
+  column-gap: 4px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.products__decor-dots {
+  display: block;
+
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  margin: 30px auto;
 
   background-color: var(--tertiary-color);
 }
