--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,1 +1,5 @@
-<section class="gallery"></section>
+<section class="gallery">
+  <div class="container">
+    <h2 class="gallery__title visually-hidden">Gallery</h2>
+  </div>
+</section>
