--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,6 @@
 <section class="reviews">
   <div class="container">
+    <h2 class="reviews__title visually-hidden">Reviews</h2>
     <ul class="reviews__list">
       <li class="reviews__item">
         <div class="reviews__img-cover"></div>
