--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,5 +12,5 @@
 @import './layout/about';
 @import './layout/gallery';
 @import './layout/reviews';
-@import './layout/locations';
+@import './layout/location';
 @import './layout/footer';
