--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -68,7 +68,7 @@
   &:hover,
   &:focus,
   &:active {
-    background-color: var(--accent-secondary-color);
+    box-shadow: 0 8px 30px 0 var(--main-color);
   }
 
   @media screen and (max-width: 731px) {
