--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -123,7 +123,8 @@
 
     &:hover,
     &:focus {
-      background-color: var(--accent-color);
+      // background-color: var(--accent-color);
+      box-shadow: inset 0 0 10px 3px var(--tertiary-color);
     }
   }
 
@@ -133,7 +134,7 @@
 
     &:hover,
     &:focus {
-      background-color: var(--accent-secondary-color);
+      box-shadow: inset 0 0 10px 3px var(--main-color);
     }
   }
 }
