--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -101,20 +101,26 @@
     <ul class="location__buttons">
       <li class="location__buttons-item">
         <button
-          class="location__button"
+          class="location__button location__button--location"
           type="button"
           aria-label="our location map"
         >
           Our Locations
+          <svg class="main-button__icon">
+            <use href="./images/sprite.svg#arrow-right-small"></use>
+          </svg>
         </button>
       </li>
       <li class="location__buttons-item">
         <button
-          class="location__button"
+          class="location__button location__button--franchise"
           type="button"
           aria-label="Franchise window open"
         >
           Franchise
+          <svg class="main-button__icon">
+            <use href="./images/sprite.svg#arrow-right-small"></use>
+          </svg>
         </button>
       </li>
     </ul>
