--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -122,9 +122,10 @@
     color: var(--tertiary-color);
 
     &:hover,
-    &:focus {
-      // background-color: var(--accent-color);
-      box-shadow: inset 0 0 10px 3px var(--tertiary-color);
+    &:focus,
+    &:active {
+      background-color: var(--secondary-color);
+      box-shadow: 0 8px 30px 0 var(--tertiary-color);
     }
   }
 
@@ -133,8 +134,9 @@
     color: var(--main-color);
 
     &:hover,
-    &:focus {
-      box-shadow: inset 0 0 10px 3px var(--main-color);
+    &:focus,
+    &:active {
+      box-shadow: 0 8px 30px 0 var(--main-color);
     }
   }
 }
