--- a/src/sass/layout/_location.scss
+++ b/src/sass/layout/_location.scss
@@ -196,10 +196,72 @@
 }
 
 .location__buttons {
+  text-align: center;
+
+  @media screen and (max-width: 731px) {
+    margin-top: 54px;
+  }
+
+  @media screen and (min-width: 732px) {
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+  }
 }
 
 .location__buttons-item {
+  @media screen and (max-width: 731px) {
+    &:nth-child(1) {
+      margin-bottom: 16px;
+    }
+  }
+
+  @media screen and (min-width: 732px) {
+    &:nth-child(1) {
+      margin-right: 15px;
+    }
+  }
 }
 
 .location__button {
+  @extend %mainButton;
+  justify-content: center;
+  width: 210px;
+  margin-left: auto;
+  margin-right: auto;
+
+  &--location {
+    background-color: var(--main-color);
+    color: var(--tertiary-color);
+
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: var(--secondary-color);
+      box-shadow: 0 8px 30px 0 var(--tertiary-color);
+    }
+
+    // &:hover,
+    // &:focus,
+    // &:active {
+    //   box-shadow: inset 0 0 2px 3px var(--tertiary-color);
+    // }
+  }
+
+  &--franchise {
+    background-color: var(--tertiary-color);
+    color: var(--main-color);
+
+    &:hover,
+    &:focus,
+    &:active {
+      box-shadow: 0 8px 30px 0 var(--main-color);
+    }
+
+    // &:hover,
+    // &:focus,
+    // &:active {
+    //   box-shadow: inset 0 0 2px 3px var(--main-color);
+    // }
+  }
 }
