--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -1,7 +1,7 @@
 %mainButton {
   display: flex;
   align-items: center;
-  height: 44px;
+  min-height: 44px;
   padding: 0 37px;
   border-radius: 22px;
 
@@ -14,7 +14,7 @@
   & .main-button__icon {
     width: 12px;
     height: 12px;
-    margin-left: 12px;
+    margin-left: 8px;
 
     fill: currentColor;
   }
