--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,60 @@
 <section class="footer">
-  <div class="container"></div>
+  <div class="container">
+    <div class="footer__wrap">
+      <h2 class="footer__title">
+        <span class="footer__title--default">homemade ice cream made</span>
+        <span class="footer__title--accent">with passion</span>
+      </h2>
+      <div class="footer__social-cover">
+        <ul class="footer__social-list">
+          <li class="footer__social-item">
+            <a
+              class="footer__social-link"
+              href="https://www.facebook.com/"
+              target="_blank"
+            >
+              <svg class="footer__social-icon">
+                <use href="./images/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="footer__social-item">
+            <a
+              class="footer__social-link"
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              <svg class="footer__social-icon">
+                <use href="./images/sprite.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="footer__social-item">
+            <a
+              class="footer__social-link"
+              href="https://linkedin.com/"
+              target="_blank"
+            >
+              <svg class="footer__social-icon">
+                <use href="./images/sprite.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <p class="footer__contact-info">
+          Feel free to contact
+          <a href="tel:+10777333777" class="footer__contact-link">
+            +1(0) 777 333 777</a
+          >
+        </p>
+      </div>
+    </div>
+    <div class="footer__copyright-cover">
+      <h4 class="footer__copyright">
+        Developed by IK Group &copy; 2023. IceCream - All Rights Reserved.
+      </h4>
+    </div>
+  </div>
 </section>
