--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,13 +1,181 @@
 .footer {
-  padding: 60px 0;
+  padding-top: 60px;
 
   background-color: var(--background-secondary-color);
 
   @media screen and (min-width: 732px) {
-    padding: 100px 0;
+    padding-top: 110px;
   }
 
   @media screen and (min-width: 1024px) {
-    padding: 130px 0;
+    padding-top: 120px;
+  }
+}
+
+.footer__wrap {
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 732px) {
+    display: flex;
+    margin-bottom: 90px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 100px;
+  }
+}
+
+.footer__title {
+  font-family: var(--title-text);
+  text-transform: uppercase;
+  font-weight: 400;
+
+  @media screen and (max-width: 1023px) {
+    width: 340px;
+  }
+
+  @media screen and (max-width: 731px) {
+    width: 240px;
+  }
+}
+
+.footer__title--default {
+  display: block;
+
+  font-size: 18px;
+  line-height: 1.167;
+  color: var(--secondary-color);
+
+  @media screen and (min-width: 732px) {
+    font-size: 26px;
+    line-height: 1.154;
+    letter-spacing: 0.04em;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 30px;
+    line-height: 1.133;
+  }
+}
+
+.footer__title--accent {
+  font-size: 34px;
+  line-height: 1.147;
+  letter-spacing: 0.04em;
+  color: var(--main-color);
+
+  @media screen and (min-width: 732px) {
+    font-size: 48px;
+    letter-spacing: 0.06em;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 58px;
+    line-height: 1.14;
+  }
+}
+
+.footer__social-cover {
+  @media screen and (min-width: 732px) {
+    margin-left: auto;
+  }
+}
+
+.footer__social-list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 40px;
+  column-gap: 20px;
+
+  @media screen and (max-width: 731px) {
+    margin-top: 40px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 50px;
+  }
+}
+
+.footer__social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+
+  color: var(--tertiary-color);
+  background-color: var(--main-color);
+
+  transition: background-color 250ms var(--timing-fn);
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: var(--secondary-color);
+  }
+}
+
+.footer__social-icon {
+  width: 20px;
+  height: 20px;
+
+  fill: currentColor;
+}
+
+.footer__contact-info {
+  text-align: end;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.86;
+  color: var(--quaternary-color);
+
+  @media screen and (min-width: 732px) {
+    font-size: 14px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 16px;
+    letter-spacing: 0.02em;
+  }
+}
+
+.footer__contact-link {
+  color: var(--main-color);
+
+  transition: color 250ms var(--timing-fn);
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: var(--secondary-color);
+  }
+}
+
+.footer__copyright-cover {
+  padding: 20px 0;
+  border-top: 1px solid var(--background-main-color);
+
+  @media screen and (min-width: 732px) {
+    padding: 12px 0;
+  }
+}
+
+.footer__copyright {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.52;
+  text-align: center;
+  color: var(--secondary-color);
+
+  @media screen and (max-width: 731px) {
+    width: 230px;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 732px) {
+    line-height: 1.86;
+    letter-spacing: 0.02em;
   }
 }
