--- a/src/sass/layout/_location.scss
+++ b/src/sass/layout/_location.scss
@@ -1,23 +1,5 @@
 .location {
-  // background-image: linear-gradient(
-  //     transparent 84px,
-  //     var(--background-secondary-color) 84px
-  //   ),
-  //   url('../images/products/mobile/background-m2.svg');
-  // background-size: 400px;
-  // background-position: center top;
-
-  // @media screen and (min-width: 732px) {
-  //   // padding: 100px 0;
-
-  //   background-size: 400px;
-  // }
-
-  // @media screen and (min-width: 1024px) {
-  //   // padding: 130px 0;
-
-  //   background-size: 500px;
-  // }
+  padding-bottom: 50px;
 
   background-image: linear-gradient(
     var(--tertiary-color) 80px,
@@ -124,6 +106,18 @@
   font-size: 12px;
   line-height: 1.5;
   color: var(--secondary-color);
+
+  @media screen and (min-width: 732px) {
+    font-size: 14px;
+    line-height: 1.83;
+    letter-spacing: 0.04em;
+  }
+
+  @media screen and (min-width: 1024px) {
+    height: 90px;
+
+    font-size: 16px;
+  }
 }
 
 .location__decor-line {
@@ -140,9 +134,6 @@
   @media screen and (min-width: 1024px) {
     margin: 32px 0;
   }
-}
-
-.location__schedule {
 }
 
 .location__schedule-point {
@@ -173,12 +164,6 @@
 
 .location__working-hours {
   color: var(--background-main-color);
-}
-
-.location__contacts {
-}
-
-.location__contacts-point {
 }
 
 .location__contacts-link {
@@ -240,12 +225,6 @@
       background-color: var(--secondary-color);
       box-shadow: 0 8px 30px 0 var(--tertiary-color);
     }
-
-    // &:hover,
-    // &:focus,
-    // &:active {
-    //   box-shadow: inset 0 0 2px 3px var(--tertiary-color);
-    // }
   }
 
   &--franchise {
@@ -257,11 +236,5 @@
     &:active {
       box-shadow: 0 8px 30px 0 var(--main-color);
     }
-
-    // &:hover,
-    // &:focus,
-    // &:active {
-    //   box-shadow: inset 0 0 2px 3px var(--main-color);
-    // }
   }
 }
