--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<section class="footer" id="contacts">
   <div class="container">
     <div class="footer__wrap">
       <h2 class="footer__title">
