--- a/src/sass/common/_base.scss
+++ b/src/sass/common/_base.scss
@@ -6,9 +6,9 @@ body {
 
   color: var(--main-color);
 
-  // &.menu-open {
-  //   overflow: hidden;
-  // }
+  &.menu-open {
+    overflow: hidden;
+  }
 }
 
 h1,
