--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -14,6 +14,46 @@
 
 .header__nav {
   margin: 0 auto;
+
+  @media screen and (max-width: 1023px) {
+    position: fixed;
+    z-index: 4;
+    top: 0;
+    right: 0;
+
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 100px 20px 30px;
+
+    text-align: center;
+    background-color: #0064d9;
+
+    transform: translateX(100%);
+
+    transition: transform 250ms var(--timing-fn);
+
+    &.isMobOpen {
+      transform: translateX(0);
+    }
+
+    // &::before {
+    //   content: '';
+
+    //   position: fixed;
+    //   top: 100px;
+    //   left: 0;
+
+    //   width: 100%;
+    //   height: 80px;
+
+    //   background-color: #d97700;
+    // }
+
+    @media screen and (min-width: 732px) {
+      width: 260px;
+    }
+  }
 }
 
 .header__list {
@@ -21,7 +61,7 @@
   column-gap: 28px;
 
   @media screen and (max-width: 1023px) {
-    display: none;
+    flex-direction: column;
   }
 }
 
@@ -50,9 +90,15 @@
   border-color: transparent;
   outline: none;
 
-  @media screen and (min-width: 732px) {
-    margin-right: 36px;
+  .isMobOpen + & {
+    position: absolute;
+    top: 44px;
+    right: 20px;
   }
+
+  // @media screen and (min-width: 732px) {
+  //   // margin-right: 36px;
+  // }
 
   @media screen and (min-width: 1024px) {
     display: none;
@@ -61,6 +107,7 @@
 
 .header__button {
   @extend %mainButton;
+  margin-left: 36px;
 
   color: var(--main-color);
   background-color: var(--tertiary-color);
@@ -69,9 +116,17 @@
   &:focus,
   &:active {
     box-shadow: 0 8px 30px 0 var(--main-color);
+    background-color: var(--accent-secondary-color);
   }
 
   @media screen and (max-width: 731px) {
-    display: none;
+    display: none; //position before ".isMo Open" is required
+  }
+
+  .isMobOpen & {
+    display: block; //position after  "@media screen and (max-width: 731px)" is required
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30px;
   }
 }
