--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,7 +29,7 @@
     </nav>
 
     <button
-      class="header__burger btn-toggle"
+      class="header__burger btn-toggle data-menu-close"
       type="button"
       aria-label="Mobile menu open button"
       data-menu-toggle
