fixing mob menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <section class="header">
   <div class="container" data-container>
-    <a href="./index.html" class="logo">
+    <a href="./index.html" class="header__logo logo" data-logo>
       <svg class="logo__icon">
         <use href="./images/sprite.svg#logo"></use>
       </svg>
