--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -13,6 +13,7 @@
 
   --background-main-color: #54a3ff;
   --background-secondary-color: #a4ceff;
+  --background-mob-menu-color: #0064d9;
   --background-secondary-color-alfa50: rgba(163, 206, 255, 0.5);
 
   --timing-fn: cubic-bezier(0.4, 0, 0.2, 1);
