--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,3 +14,5 @@
 @import './layout/reviews';
 @import './layout/location';
 @import './layout/footer';
+@import './components/modal';
+@import './components/modalAbout';
