--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -62,3 +62,18 @@
     letter-spacing: 0.06em;
   }
 }
+
+%modalTitle {
+  font-family: var(--title-text);
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 1.5;
+
+  color: var(--main-color);
+
+  @media screen and (min-width: 732px) {
+    font-size: 34px;
+    line-height: 1.4;
+  }
+}
