--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -58,6 +58,7 @@
           class="about__button"
           type="button"
           aria-label="Read-more button"
+          data-modal-about
         >
           Read more
           <svg class="main-button__icon">
