--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
-<div class="backdrop" data-modal-backdrop>
-  <div class="modal" data-modal>
+<div class="backdrop backdrop__is-hidden" data-modal>
+  <div class="modal">
     <button
       class="modal__close-button"
       type="button"
