--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -8,30 +8,39 @@
   height: 100%;
   overflow: auto;
 
+  opacity: 1;
   background-color: rgba(0, 0, 0, 0.8);
+
+  transition: opacity 250ms var(--timing-fn);
+
+  &.backdrop__is-hidden {
+    pointer-events: none;
+
+    opacity: 0;
+  }
 }
 
 .modal {
   position: absolute;
-  // top: 20px;
   top: 50%;
   left: 50%;
 
   padding: 28px 20px;
   max-width: 600px;
-
   border-radius: 10px;
   overflow: auto;
 
   background-color: var(--tertiary-color);
 
-  // transform: translateX(-50%);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms var(--timing-fn);
+
+  .backdrop.backdrop__is-hidden & {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
 
   @media screen and (min-width: 568px) {
-    // height: 90vh;
-    // max-height: 640px;
-
     max-height: 90vh;
   }
 }
