--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -104,6 +104,7 @@
           class="location__button location__button--location"
           type="button"
           aria-label="our location map"
+          data-location-open
         >
           Our Locations
           <svg class="main-button__icon">
