--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,3 +16,4 @@
 @import './layout/footer';
 @import './components/modal';
 @import './components/modalAbout';
+@import './components/modalLocation';
