--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -20,6 +20,28 @@
   }
 }
 
+%modalButton {
+  display: flex;
+  align-items: center;
+  min-height: 44px;
+  border-radius: 22px;
+  padding: 0 37px;
+  margin: 0 auto;
+
+  font-weight: 500;
+  line-height: 1.313;
+  background-color: var(--main-color);
+  color: var(--tertiary-color);
+
+  transition: background-color 250ms var(--timing-fn);
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: var(--secondary-color);
+  }
+}
+
 %sectionSubtitle {
   font-family: var(--title-text);
   text-align: center;
@@ -75,5 +97,29 @@
   @media screen and (min-width: 732px) {
     font-size: 34px;
     line-height: 1.4;
+  }
+}
+
+%modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  max-width: 600px;
+  border-radius: 10px;
+  overflow: auto;
+
+  background-color: var(--tertiary-color);
+
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms var(--timing-fn);
+
+  .backdrop.backdrop__is-hidden & {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
+
+  @media screen and (min-width: 568px) {
+    max-height: 90vh;
   }
 }
