fixing location modal

--- a/src/partials/modalLocation.html
+++ b/src/partials/modalLocation.html
@@ -11,18 +11,16 @@
       </svg>
     </button>
 
-    <div class="">
-      <h2 class="modalLocation__title">Our Locations</h2>
-      <div class="modalLocation__mapCover">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1107.8708928812914!2d-118.41119143865093!3d33.88451211682255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b3eb826efffd%3A0x3688885d993893ce!2sManhattan%20Beach%20Creamery!5e0!3m2!1suk!2suk!4v1700513909315!5m2!1suk!2suk"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </div>
-      <!-- <button
+    <h2 class="modalLocation__title">Our Locations</h2>
+    <iframe
+      class="modalLocation__map"
+      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1656.099816133828!2d-118.4111914!3d33.8845121!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b3eb826efffd%3A0x3688885d993893ce!2sManhattan%20Beach%20Creamery!5e0!3m2!1sen!2suk!4v1700526200687!5m2!1sen!2suk"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+
+    <!-- <button
         class="modalLocation__button"
         type="button"
         aria-label="big map with our locations"
@@ -30,6 +28,5 @@
       >
         Open map
       </button> -->
-    </div>
   </div>
 </div>
