--- a/src/sass/components/_modalLocation.scss
+++ b/src/sass/components/_modalLocation.scss
@@ -1,49 +1,31 @@
 .modalLocation {
   @extend %modal;
-  padding: 18px 10px;
-  // @include adaptiveValue(width, 260, 400, 320, 480);
-  // @include adaptiveValue(height, 144, 221, 320, 480);
+  padding: 10px;
 
-  width: 90vw;
-  height: 90vh;
+  width: 95vw;
+  height: 95vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  @media screen and (min-width: 768px) {
+    max-height: 80vh;
+  }
 }
 
 .modalLocation__title {
   @extend %modalTitle;
 }
 
-.modalLocation__mapCover {
-  margin-top: 10px;
-  margin-bottom: 10px;
-
-  @media screen and (min-width: 732px) {
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-}
-
-.modalLocation__mapCover iframe {
+.modalLocation__map {
   display: block;
   border-radius: 10px;
+  border: none;
   width: 100%;
-  height: 100%;
-
-  @media screen and (min-width: 480px) {
-    // width: 400px;
-    // height: 221px;
-  }
-
-  @media screen and (min-width: 732px) {
-    width: 600px;
-    height: 450px;
-  }
+  height: 90%;
 }
 
 .modalLocation__button {
   @extend %modalButton;
 }
-
-/*
-   width="600"
-   height="450"
-*/
